eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 431062523786.dkr.ecr.ap-southeast-1.amazonaws.com/simplebank:3716f20c28c3cc3913b269d45a724cddf434559e
        ports:
        - containerPort: 8080
